feat: add auth test endpoint
