# cmd/main.go
@@ -95,6 +95,8 @@ func main() {
 
 	apiv1 := app.Group("/api/v1")
 
+	apiv1.Get("/greeting", hwHandler.Greeting)
+
 	apiv1.Get("/property/:propertyId", propertyHandler.GetPropertyById)
 	apiv1.Get("/properties", propertyHandler.GetAllProperties)
 
@@ -111,7 +113,7 @@ func main() {
 	apiv1.Get("/oauth/callback", googleHandler.ExchangeToken)
 
 	apiv1.Use(authMiddleware)
-	apiv1.Get("/greeting", hwHandler.Greeting)
+	apiv1.Get("/user/greeting", hwHandler.UserGreeting)
 
 	err = app.Listen(fmt.Sprintf(":%v", cfg.AppPort))
 	if err != nil {
